MODE-1310 Added sequencers to the 3.x codebase
Added sequencers to the 'modeshape-jcr-redux' module. Very limited testing has been done,
and will follow in subsequent commits.